Endpoints for products and role
